--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://183.250.161.187:3642/ERKE.ipa</string>
+					<string>http://192.168.0.253:8888/erke.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>http://183.250.161.187:3642/erke-57.png</string>
+					<string>http://192.168.0.253:8888/erke-57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>http://183.250.161.187:3642/erke-512.png</string>
+					<string>http://192.168.0.253:8888/erke-512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
